automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -389,16 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': [{'x': [0, 100], 'y': [0.013457483333333336, 98.96697415]}]}"
+       "{'data': [{'x': [0, 100], 'y': [0.0085, 62.508499999999984]}]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
     "    return {'data': [{'x': [initial_x, ending_x], 'y': [initial_y, ending_y]}]}\n",
     "\n",
     "frames = list(map(lambda iteration: to_line(iteration['m'], iteration['b']),iterations))\n",
-    "frames[1]"
+    "frames[0]"
    ]
   },
   {
