--- a/index.ipynb
+++ b/index.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -445,18 +445,18 @@
        "data": [
         {
          "type": "scatter",
-         "uid": "432f0d9c-d740-11e8-94a1-0242ac110007",
+         "uid": "49e40250-d740-11e8-94a1-0242ac110007",
          "x": [
           200
          ],
          "y": [
-          0
+          200
          ]
         },
         {
          "mode": "markers",
          "type": "scatter",
-         "uid": "432f1cba-d740-11e8-94a1-0242ac110007",
+         "uid": "49e4134e-d740-11e8-94a1-0242ac110007",
          "x": [
           30,
           40,
@@ -654,23 +654,23 @@
        }
       },
       "text/html": [
-       "<div id=\"8ddda778-2ee9-4999-adca-9b11ebbf796b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"8f7d819d-1bfb-44cd-8ba9-e73806db8306\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '8ddda778-2ee9-4999-adca-9b11ebbf796b',\n",
-       "            [{\"x\": [200], \"y\": [0], \"type\": \"scatter\", \"uid\": \"436d82b6-d740-11e8-94a1-0242ac110007\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"436d84f0-d740-11e8-94a1-0242ac110007\"}],\n",
+       "            '8f7d819d-1bfb-44cd-8ba9-e73806db8306',\n",
+       "            [{\"x\": [200], \"y\": [200], \"type\": \"scatter\", \"uid\": \"4a0ca3c2-d740-11e8-94a1-0242ac110007\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"4a0ca610-d740-11e8-94a1-0242ac110007\"}],\n",
        "            {\"title\": \"Regression Line\", \"updatemenus\": [{\"buttons\": [{\"args\": [null], \"label\": \"Play\", \"method\": \"animate\"}], \"type\": \"buttons\"}], \"xaxis\": {\"autorange\": false, \"range\": [0, 110]}, \"yaxis\": {\"autorange\": false, \"range\": [0, 160]}},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('8ddda778-2ee9-4999-adca-9b11ebbf796b',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('8ddda778-2ee9-4999-adca-9b11ebbf796b');})\n",
+       "        ).then(function () {return Plotly.addFrames('8f7d819d-1bfb-44cd-8ba9-e73806db8306',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('8f7d819d-1bfb-44cd-8ba9-e73806db8306');})\n",
        "        });</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"8ddda778-2ee9-4999-adca-9b11ebbf796b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "<div id=\"8f7d819d-1bfb-44cd-8ba9-e73806db8306\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
        "        Plotly.plot(\n",
-       "            '8ddda778-2ee9-4999-adca-9b11ebbf796b',\n",
-       "            [{\"x\": [200], \"y\": [0], \"type\": \"scatter\", \"uid\": \"436d82b6-d740-11e8-94a1-0242ac110007\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"436d84f0-d740-11e8-94a1-0242ac110007\"}],\n",
+       "            '8f7d819d-1bfb-44cd-8ba9-e73806db8306',\n",
+       "            [{\"x\": [200], \"y\": [200], \"type\": \"scatter\", \"uid\": \"4a0ca3c2-d740-11e8-94a1-0242ac110007\"}, {\"mode\": \"markers\", \"x\": [30, 40, 100], \"y\": [45, 60, 150], \"type\": \"scatter\", \"uid\": \"4a0ca610-d740-11e8-94a1-0242ac110007\"}],\n",
        "            {\"title\": \"Regression Line\", \"updatemenus\": [{\"buttons\": [{\"args\": [null], \"label\": \"Play\", \"method\": \"animate\"}], \"type\": \"buttons\"}], \"xaxis\": {\"autorange\": false, \"range\": [0, 110]}, \"yaxis\": {\"autorange\": false, \"range\": [0, 160]}},\n",
        "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
-       "        ).then(function () {return Plotly.addFrames('8ddda778-2ee9-4999-adca-9b11ebbf796b',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('8ddda778-2ee9-4999-adca-9b11ebbf796b');})\n",
+       "        ).then(function () {return Plotly.addFrames('8f7d819d-1bfb-44cd-8ba9-e73806db8306',[{\"data\": [{\"x\": [0, 100], \"y\": [0.0085, 62.508499999999984], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.013457483333333336, 98.96697415], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.016348771640555558, 120.23160758664055], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.018034938763874835, 132.63433827691753], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.01901821141416974, 139.86830869337098], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019591516465717437, 144.08756731113914], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.019925705352372706, 146.54847639291464], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020120428242875608, 147.98381709628785], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.02023380672219544, 148.82098862041082], \"type\": \"scatter\"}]}, {\"data\": [{\"x\": [0, 100], \"y\": [0.020299740568747532, 149.30927422474454], \"type\": \"scatter\"}]}]);}).then(function(){Plotly.animate('8f7d819d-1bfb-44cd-8ba9-e73806db8306');})\n",
        "        });</script>"
       ]
      },
@@ -686,7 +686,7 @@
     "\n",
     "x_values_of_shows = list(map(lambda show: show['x'], shows))\n",
     "y_values_of_shows = list(map(lambda show: show['y'], shows))\n",
-    "figure = {'data': [{'x': [200], 'y': [0]}, {'x': x_values_of_shows, 'y': y_values_of_shows, 'mode': 'markers'}],\n",
+    "figure = {'data': [{'x': 0], 'y': [200]}, {'x': x_values_of_shows, 'y': y_values_of_shows, 'mode': 'markers'}],\n",
     "          'layout': {'xaxis': {'range': [0, 110], 'autorange': False},\n",
     "                     'yaxis': {'range': [0,160], 'autorange': False},\n",
     "                     'title': 'Regression Line',\n",
