automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -686,7 +686,7 @@
     "\n",
     "x_values_of_shows = list(map(lambda show: show['x'], shows))\n",
     "y_values_of_shows = list(map(lambda show: show['y'], shows))\n",
-    "#the x a\n",
+    "#the x and y values are just the data frm \n",
     "figure = {'data': [{'x': [0], 'y': [0]}, {'x': x_values_of_shows, 'y': y_values_of_shows, 'mode': 'markers'}],\n",
     "          'layout': {'xaxis': {'range': [0, 110], 'autorange': False},\n",
     "                     'yaxis': {'range': [0,160], 'autorange': False},\n",
