--- a/index.ipynb
+++ b/index.ipynb
@@ -697,7 +697,7 @@
     "                                                   'args': [None]}]}]\n",
     "                    },\n",
     "          'frames': frames}\n",
-    "#frames down here is what we created in the last step iterating through and updating b and \n",
+    "#frames down here is what we created in the last step iterating through and updating b and m and creating a line\n",
     "iplot(figure)"
    ]
   },
